examples/test/testpolicy4894.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4894
  namespace: namespace268
spec:
  podSelector:
    matchLabels:
      key47: value32
      key45: value16
      key6: value42
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key30: value0
          key48: value35
      podSelector:
        matchLabels:
          key18: value28
          key8: value15
          key22: value11
